<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_add_favorite_menu_detail_match"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/add_favorite"
        app:showAsAction="always" />
</menu>